Added tests for Model