@@ -26,6 +26,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs '-Dnet.bytebuddy.experimental=true'
 }
 
 application {
